move files into folders

--- a/public/index.html
+++ b/public/index.html
@@ -83,9 +83,9 @@
   <h1>Test landing page</h1>
 
   <div class="btn-container">
-    <a class="btn" href="hostedfields.html">🎯 Hosted Fields</a>
-    <a class="btn" href="s2s.html">🔒 S2S</a>
-    <a class="btn" href="hostedforms.html">📝 Hosted Forms</a>
+    <a class="btn" href="/forms/hostedfields.html">🎯 Hosted Fields</a>
+    <a class="btn" href="/forms/s2s.html">🔒 S2S</a>
+    <a class="btn" href="/forms/hostedforms.html">📝 Hosted Forms</a>
   </div>
 </body>
 </html>
