--- a/public/success.html
+++ b/public/success.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Résultat du paiement</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <style>
     body {
       background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
