--- a/public/test forms/hostedFields.html
+++ b/public/test forms/hostedFields.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paiement sécurisé Dalenys</title>
   <script src="https://js.sandbox.dalenys.com/hosted-fields/v2.2.0/hosted-fields.min.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 
   <!-- Navigation -->
   <div id="top-left-corner">
-    <a href="index.html" class="back-home-btn">← Home page</a>
+    <a href="../index.html" class="back-home-btn">← Home page</a>
     <button id="open-test-cards" class="primary">Click here to display test cards</button>
   </div>
   </header>
@@ -90,11 +90,11 @@
   </div>
 
   <!-- JS -->
-  <script src="env-manager.js"></script>
-<script src="script.js"></script>
-<script src="payment-utils.js"></script>
-<script src="form-handler.js"></script>
-<script src="test-cards.js"></script>
-<script src="hostedfields-handler.js"></script>
+  <script src="../js/env-manager.js"></script>
+<script src="../js/script.js"></script>
+<script src="../js/payment-utils.js"></script>
+<script src="../js/form-handler.js"></script>
+<script src="../js/test-cards.js"></script>
+<script src="../js/hostedfields-handler.js"></script>
 </body>
 </html>
