--- a/public/test forms/s2s.html
+++ b/public/test forms/s2s.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paiement sécurisé Dalenys – S2S</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
   <!-- ======= HEADER regroupé ======= -->
   <header id="main-header">
     <div id="top-left-corner">
-      <a href="index.html" class="back-home-btn">← Home page</a>
+      <a href="../index.html" class="back-home-btn">← Home page</a>
       <button id="open-test-cards" class="primary">Click here to display test cards</button>
     </div>
 
@@ -150,13 +150,13 @@
   </div>
 
   <!-- ======= Scripts ======= -->
-  <script src="env-manager.js"></script>
-  <script src="use-case-selection.js"></script>
-  <script src="extra-params.js"></script>
-  <script src="payment-utils.js"></script>
-  <script src="form-handler.js"></script>
-  <script src="script.js"></script>
-  <script src="test-cards.js"></script>
+  <script src="../js/env-manager.js"></script>
+  <script src="../js/use-case-selection.js"></script>
+  <script src="../js/extra-params.js"></script>
+  <script src="../js/payment-utils.js"></script>
+  <script src="../js/form-handler.js"></script>
+  <script src="../js/script.js"></script>
+  <script src="../js/test-cards.js"></script>
 
 </body>
 </html>
