--- a/public/test forms/hostedforms.html
+++ b/public/test forms/hostedforms.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Paiement sécurisé Dalenys – Hosted Forms</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
 </head>
 <body>
 
@@ -19,7 +19,7 @@
   </div>
 
   <div id="top-left-corner">
-    <a href="index.html" class="back-home-btn">← Home page</a>
+    <a href="../index.html" class="back-home-btn">← Home page</a>
     <button id="open-test-cards" class="primary">Click here to display test cards</button>
   </div>
   </header>
@@ -90,10 +90,10 @@
     </div>
   </div>
 
-  <script src="env-manager.js"></script>
-  <script src="extra-params.js"></script>
-  <script src="script.js"></script>
-  <script src="test-cards.js"></script>
+  <script src="../js/env-manager.js"></script>
+  <script src="../js/extra-params.js"></script>
+  <script src="../js/script.js"></script>
+  <script src="../js/test-cards.js"></script>
 
   <script>
 document.addEventListener("DOMContentLoaded", () => {
