--- a/public/test forms/next.html
+++ b/public/test forms/next.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Paiement Dalenys</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="../style.css" />
   <style>
     body {
       background: radial-gradient(circle at top, #0f2027, #203a43, #2c5364);
@@ -65,7 +65,7 @@
 <body class="dark-mode">
 <header id="main-header">
   <div id="top-left-corner">
-    <a href="index.html" class="back-home-btn">← Home page</a>
+    <a href="../index.html" class="back-home-btn">← Home page</a>
   </div>
 </header>
 
@@ -123,11 +123,11 @@
   </div>
 </div>
 
-<script src="use-case-selection.js"></script>
-<script src="extra-params.js"></script>
-<script src="env-manager.js"></script>
-<script src="form-handler.js"></script>
-<script src="payment-utils.js"></script>
+<script src="../js/use-case-selection.js"></script>
+<script src="../js/extra-params.js"></script>
+<script src="../js/env-manager.js"></script>
+<script src="../js/form-handler.js"></script>
+<script src="../js/payment-utils.js"></script>
 
 </body>
 </html>
