--- a/public/test forms/hostedforms.html
+++ b/public/test forms/hostedforms.html
@@ -94,86 +94,8 @@
   <script src="../js/extra-params.js"></script>
   <script src="../js/script.js"></script>
   <script src="../js/test-cards.js"></script>
-
-  <script>
-document.addEventListener("DOMContentLoaded", () => {
-  const base = window.location.origin;
-  document.getElementById("redirect-success").value = `${base}/success.html`;
-  document.getElementById("redirect-cancel").value  = `${base}/success.html`;
-});
-
-document.addEventListener("DOMContentLoaded", () => {
-  const form = document.getElementById("hosted-forms");
-  const orderField = document.getElementById("orderid-field");
-  const idField    = document.getElementById("identifier-field");
-
-  // 🆔 Génère un ORDERID unique
-  orderField.value = "RND" + Date.now();
-
-  // 🔐 Récupère environnement depuis localStorage
-  const lastEnv = localStorage.getItem("lastEnv");
-  const customEnvs = JSON.parse(localStorage.getItem("customEnvs") || "{}");
-  const env = lastEnv ? customEnvs[lastEnv] : null;
-
-  if (env) {
-    if (env.identifier) idField.value = env.identifier;
-    console.log(`✅ Environnement "${lastEnv}" chargé depuis localStorage.`);
-  } else {
-    alert("⚠️ Aucun environnement sélectionné dans le navigateur.");
-  }
-
-  // 🧾 Interception du submit
-  form.addEventListener("submit", async (e) => {
-    e.preventDefault();
-
-    if (!env || !env.secretKey) {
-      alert("❌ Clé secrète manquante. Sélectionnez un environnement valide.");
-      return;
-    }
-
-    // Collecte des données du formulaire
-    const fd = new FormData(form);
-    const params = {};
-    fd.forEach((v, k) => { params[k] = v; });
-
-    try {
-      // 💡 Envoi au backend (compute + redirection)
-      const resp = await fetch("/processHostedForm", {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ params, secretKey: env.secretKey })
-      });
-
-      if (!resp.ok) throw new Error("Erreur backend HostedForm");
-      const html = await resp.text();
-
-      // 🔄 Injection du HTML pour redirection POST vers Dalenys
-      const win = window.open("", "_self");
-      win.document.write(html);
-      win.document.close();
-
-    } catch (err) {
-      console.error("❌ HostedForm error :", err);
-      alert("Impossible de lancer le paiement HostedForm : " + err.message);
-    }
-  });
-});
-
-// 💳 Pop-in cartes test
-document.addEventListener("DOMContentLoaded", () => {
-  const modal   = document.getElementById("test-cards-modal");
-  const openBtn = document.getElementById("open-test-cards");
-  const closeBtn= document.getElementById("close-test-cards");
-  openBtn.addEventListener("click", () => {
-    buildTestCardsTable();
-    modal.classList.remove("hidden");
-  });
-  closeBtn.addEventListener("click", () => modal.classList.add("hidden"));
-  modal.addEventListener("click", e => {
-    if (e.target === modal) modal.classList.add("hidden");
-  });
-});
-</script>
+  <script src="../js/payment-utils.js"></script>
+  <script src="../js/form-handler.js"></script>
 
 </body>
 </html>
