--- a/public/index.html
+++ b/public/index.html
@@ -86,6 +86,7 @@
     <a class="btn" href="/test forms/hostedfields.html">🎯 Hosted Fields</a>
     <a class="btn" href="/test forms/s2s.html">🔒 S2S</a>
     <a class="btn" href="/test forms/hostedforms.html">📝 Hosted Forms</a>
+    <a class="btn" href="/Demo/Demo.html">🎥 Demo</a>
   </div>
 </body>
 </html>
