--- a/public/Demo/Demo.html
+++ b/public/Demo/Demo.html
@@ -81,7 +81,7 @@
       <div class="address-block" id="billing-address">
         <h3 class="address-header">Adresse de facturation
             <span
-    class="info-icon"
+    class="map-icon"
     onmouseover="PaymentForm.showMappingTooltip('billing', event)"
     onmouseout="PaymentForm.hideTooltipOnMove()"
   >?</span>
@@ -107,7 +107,7 @@
       <div class="address-block" id="shipping-address">
         <h3 class="address-header">Adresse de livraison
             <span
-    class="info-icon"
+    class="map-icon"
     onmouseover="PaymentForm.showMappingTooltip('shipping', event)"
     onmouseout="PaymentForm.hideTooltipOnMove()"
   >?</span></h3>
