feat: visual update

--- a/public/Demo/Demo.html
+++ b/public/Demo/Demo.html
@@ -26,7 +26,7 @@
 
   <main>
     <!-- zone des articles -->
-    <h2 class="checkout-step-title">🛒 Étape 1 — Choix des articles</h2>
+    <h2 class="checkout-step-title">🛒 Choix des articles</h2>
     <section class="articles">
       <div class="article-card" data-id="jean" data-name="Jean slim" data-price="2000">
         <img src="https://images.unsplash.com/photo-1584370848010-d7fe6bc767ec?auto=format&fit=crop&w=400&q=60" alt="Jean slim" />
@@ -75,7 +75,7 @@
 
     <!-- Étape 2 : adresses -->
     <section id="addresses-section">
-      <h2 class="checkout-step-title">🏠 Étape 2 — Adresses du client</h2>
+      <h2 class="checkout-step-title">🏠 Adresses du client</h2>
 
       <!-- Billing -->
       <div class="address-block" id="billing-address">
@@ -137,7 +137,7 @@
 
     <!-- Étape 3 : paiement -->
     <section id="payment-section" class="hidden">
-      <h2 class="checkout-step-title">💳 Étape 3 — Paiement</h2>
+      <h2 class="checkout-step-title">💳 Paiement</h2>
 
       <!-- IMPORTANT : names matching s2s.html / API -->
       <form id="s2s-payment-form">
