fix: visuals demo

--- a/public/index.html
+++ b/public/index.html
@@ -80,12 +80,12 @@
   </style>
 </head>
 <body>
-  <h1>Test landing page</h1>
+  <h1>Implementation testing tools</h1>
 
   <div class="btn-container">
     <a class="btn" href="/test forms/hostedfields.html">🎯 Hosted Fields</a>
     <a class="btn" href="/test forms/s2s.html">🔒 S2S : payment</a>
-    <a class="btn" href="/test forms/maintenance.html">⏳ S2S:Maintenance ops</a>
+    <a class="btn" href="/test forms/maintenance.html">⏳ S2S:Maintenance operations</a>
     <a class="btn" href="/test forms/hostedforms.html">📝 Hosted Forms</a>
     <a class="btn" href="/Demo/Demo.html">🎥 Demo</a>
   </div>
