--- a/public/Demo/Demo.html
+++ b/public/Demo/Demo.html
@@ -138,18 +138,15 @@
     <!-- Étape 3 : paiement -->
     <section id="payment-section" class="hidden">
       <h2 class="checkout-step-title">💳 Paiement</h2>
-
-      <!-- IMPORTANT : names matching s2s.html / API -->
       <form id="s2s-payment-form">
         <div class="form-group">
           <label>Nom sur la carte</label>
           <!-- name must be CARDFULLNAME as expected by Dalenys -->
-          <input type="text" id="cardholder" name="CARDFULLNAME" placeholder="Jean Dupont" required />
+          <input type="text" id="cardholder" name="CARDFULLNAME" pattern="[A-Za-zÀ-ÖØ-öø-ÿ\s'-]+" title="Only letters allowed" placeholder="Jean Dupont"  required />
         </div>
 
         <div class="form-group card-number-group">
           <label>Numéro de carte</label>
-          <!-- name must be CARDCODE -->
           <div class="card-input-wrapper">
             <input type="text" id="card-number" name="CARDCODE" placeholder="4111 1111 1111 1111" required />
             <div id="card-brand" class="brand-output"></div>
@@ -166,7 +163,7 @@
           <div class="form-group">
             <label>CVV</label>
             <!-- name must be CARDCVV -->
-            <input type="text" name="CARDCVV" id="cvv" placeholder="123" required />
+            <input type="number" name="CARDCVV" id="cvv" placeholder="123" required />
           </div>
         </div>
 
