--- a/public/Demo/Demo.html
+++ b/public/Demo/Demo.html
@@ -146,7 +146,10 @@
         </div>
 
         <div class="form-group card-number-group">
-          <label>Numéro de carte</label>
+          <div class="card-label tooltip-brand" style="display: flex; flex:auto;justify-content: space-between;">
+            <div class="card-label"><label>Numéro de carte</label> </div>
+            <div class="tooltip-brand"><label style="font-weight: 400;font-family: emoji;">Choose your brand</label><span class="info-icon" data-tooltip="If your card is co-branded, you have the right to choose which brand you want to send">?</span></div>
+</div>
           <div class="card-input-wrapper">
             <input type="text" id="card-number" name="CARDCODE" placeholder="4111 1111 1111 1111" required />
             <div id="card-brand" class="brand-output"></div>
